/* Copyright (c) 2023 Snowflake Inc. All rights reserved.

   Licensed under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.
*/

syntax = "proto3";

option go_package = "github.com/Snowflake-Labs/sansshell/tlsinfo";

package TLSInfo;

// The TLSInfo service definition
service TLSInfo {
    // Retrieves details of the TLS certificate chain from a specified server
    rpc GetTLSCertificate (TLSCertificateRequest) returns (TLSCertificateChain);
}

message TLSCertificateRequest {
    string server_address = 1; // Server's address, including port (e.g. "example.com:443")
    string server_name = 2;
    bool insecure_skip_verify = 3;
}

message TLSCertificate {
    string issuer = 1;
    string subject = 2;
    int64 not_before = 3;
    int64 not_after = 4;
    repeated string dns_names = 5;
    repeated string ip_addresses = 6;
}

message TLSCertificateChain {
    repeated TLSCertificate certificates = 1;
}
